--- a/Ejemplos/Matrix/CMakeLists.txt
+++ b/Ejemplos/Matrix/CMakeLists.txt
@@ -1,3 +1,4 @@
-cmake_minimum_required(VERSION 3.20)
+cmake_minimum_required(VERSION 3.18)
+SET (CMAKE_CXX_STANDARD 11)
 PROJECT(Multiplication)
 ADD_SUBDIRECTORY(src)
